infra/k8s/bouquet-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bouquet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bouquet
  template:
    metadata:
      labels:
        app: bouquet
    spec:
      containers:
      - name: bouquet
        image: eklav/fb-bouquet
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bouquet-service
spec:
  type: NodePort
  selector:
    app: bouquet
  ports:
  - name: bouquet-port
    protocol: TCP
    port: 3000
    targetPort: 3000
