infra/k8s/flower-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
      - name: flower
        image: eklav/fb-flower
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: flower-service
spec:
  type: NodePort
  selector:
    app: flower
  ports:
  - name: flower-port
    protocol: TCP
    port: 3000
    targetPort: 3000
