infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: flowerbouquet.com
    http:
      paths:
      - path: /api/user/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port: 
              number: 3000
      - path: /api/flower/?(.*)
        pathType: Prefix
        backend:
          service:
            name: flower-service
            port: 
              number: 3000
      - path: /api/bouquet/?(.*)
        pathType: Prefix
        backend:
          service:
            name: bouquet-service
            port: 
              number: 3000
      - path: /api/order/?(.*)
        pathType: Prefix
        backend:
          service:
            name: order-service
            port: 
              number: 3000
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-service
            port: 
              number: 3000
